# actix-web-starter

./: .env  Cargo.toml  readme.md
src/: main.rs
src/queries/: register.sql
